webhook-final/kube-objects/webhook-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iptables-lo-system
  labels:
    name: iptables-lo-system
