webhook-final/kube-objects/webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iptables-lo-svc
  namespace: iptables-lo-system
spec:
  selector:
    app: iptables-lo-app
  ports:
    - port: 443
      targetPort: webhook-port
