webhook-final/kube-objects/webhook-configuration-mutating.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: iptables-lo-webhook
webhooks:
  - name: iptables-lo-svc.iptables-lo-system.svc
    matchPolicy: Equivalent
    reinvocationPolicy: IfNeeded # Call webhook again if object is mutated
    sideEffects: None
    admissionReviewVersions: ["v1"]
    clientConfig:
      service:
        name: iptables-lo-svc
        namespace: iptables-lo-system
        path: "/iptables-apply"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURvRENDQW9pZ0F3SUJBZ0lVR2pvTWZPUEtNNUpwRitlUndyR0k1aUl2a080d0RRWUpLb1pJaHZjTkFRRUwKQlFBd1JURUxNQWtHQTFVRUJoTUNRVlV4RXpBUkJnTlZCQWdNQ2xOdmJXVXRVM1JoZEdVeElUQWZCZ05WQkFvTQpHRWx1ZEdWeWJtVjBJRmRwWkdkcGRITWdVSFI1SUV4MFpEQWVGdzB5TXpBNE1UUXhNelE1TURSYUZ3MHlOREE0Ck1UTXhNelE1TURSYU1FVXhDekFKQmdOVkJBWVRBa0ZWTVJNd0VRWURWUVFJREFwVGIyMWxMVk4wWVhSbE1TRXcKSHdZRFZRUUtEQmhKYm5SbGNtNWxkQ0JYYVdSbmFYUnpJRkIwZVNCTWRHUXdnZ0VpTUEwR0NTcUdTSWIzRFFFQgpBUVVBQTRJQkR3 [...]
    rules:
      - operations: [ "CREATE", "UPDATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
        scope: "Namespaced"
